--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,6 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="text-center pt-5 m-0 mb-5" id="Image" style="top; background-image: url('https://images.unsplash.com/photo-1483653364400-eedcfb9f1f88?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2270&q=80'); height: 700px; width: 100%;">
+    <div id="Title-1" class="bg-light m-3 py-1"><p class="display-1 fw-bold">One Page Wonder</h1></div>
+    <div id="Title-2" class="bg-light m-3 py-1"><p class="display-3 fw-bold">Will Knock Your Socks Off</p></div>
+</div>
