portfolio las change

--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -20,7 +20,7 @@
                         <img style="width: 20rem; height: 11.4rem; object-fit: cover;" src="https://cdn.dribbble.com/users/5754239/screenshots/18739717/media/357b12bdc014314f08d632fc8ae89db1.jpg?resize=400x0" class="img-fluid card-img-top" alt="projectPortfolio">
                         <div class="col-12">
                         <h3 class="col-12 mt-3 justify-content-left" style="color:rgb(36, 109, 255)"> Project Name</h3>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. And drop your amazing and super cool porject to showcase here!</p>
+                        <p class="card-text">Some 1 quick example text to build on the card title and make up the bulk of the card's content. And drop your amazing and super cool porject to showcase here!</p>
                         </div>
                     </div>
                 </div>
