--- a/website/templates/contact.html
+++ b/website/templates/contact.html
@@ -1,2 +1,40 @@
-<!-- your html code here -->
-<p>Hello, I'm contact.html</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/website/assets/css/style.css">
+    <title>Contact</title>
+</head>
+<body style="background-color: white; padding: 50px;">
+    <div class="container">
+        <h1>Contact</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum excepturi eos quam maxime nemo eaque soluta non libero fuga eum id amet, provident, autem adipisci incidunt quos perferendis. Impedit, et!</p>
+        <div style=" background-color: lightgray; padding:25px; max-width: 750px; margin: 0 auto;">
+            <form>
+                <div class="row mb-3">
+                    <div class="col" style="text-align: right;">
+                        <label for="exampleInputEmail1" class="form-label"><b>Your E-mail</b></label>
+                    </div>
+                    <div class="col-9">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Your email">
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col" style="text-align: right;">
+                        <label for="exampleInputPassword1" class="form-label"><b>Your message</b></label>
+                    </div>
+                    <div class="col-9">
+                        <textarea class="form-control" aria-label="With textarea" placeholder="Please enter your message here..."></textarea>
+                    </div>
+                </div>
+                <div class="text-end">
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
