--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark ">
+<nav class="navbar navbar-expand-lg bg-dark ">
     <div class="container-fluid">
       <a class="navbar-brand" style="color:#A9A9A9" href="#">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
