background color to grey

--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<div class="container-fluid bg-white d-flex">
+<div class="container-fluid d-flex">
     <div class="row align-items-center mx-auto">
         <div class="col-8 p-0">
             <h1>This First Heading <span class="text-secondary">Will Catch Your Eye</span></h1>
