--- a/website/templates/services.html
+++ b/website/templates/services.html
@@ -1,5 +1,5 @@
 <!-- your html code here -->
-<div class="bg-white d-flex">
+<div class="d-flex">
     <div class="row align-items-center mx-auto">
         <div class="col-2 p-0">
             <img class="rounded-circle" src="https://images.unsplash.com/photo-1515378960530-7c0da6231fb1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGtleWJvYXJkfGVufDB8fDB8fHww&auto=format&fit=crop&w=400&q=60"
